--- a/static/content.yaml
+++ b/static/content.yaml
@@ -4,3 +4,26 @@ hero:
   title: "iTMageLAB"
   subtitle: "Семенов Андрей Владимирович"
   logo: "/static/logo.png"
+
+about:
+  photo: "/static/photo.jpg"
+  title: "Обо мне"
+  description: "Senior DevOps, SRE с большим опытом работы в IT-индустрии. Специализируюсь на администрировании Linux систем, автоматизации процессов и построении надежной инфраструктуры."
+  skills:
+    - "15+ лет опыта в администрировании Linux и UNIX систем"
+    - "Настройка и поддержка сложных высоконагруженных систем"
+    - "Автоматизация процессов развертывания и CI/CD"
+    - "Мониторинг, логирование и обеспечение отказоустойчивости"
+  work_experience:
+    - year: "2020-2024"
+      position: "Senior DevOps Engineer"
+      company: "Tech Company Inc."
+      description: "Руководство командой DevOps, проектирование и внедрение CI/CD процессов, миграция инфраструктуры в облако, автоматизация развертывания."
+    - year: "2017-2020"
+      position: "DevOps Engineer"
+      company: "IT Solutions Ltd."
+      description: "Администрирование Linux серверов, настройка мониторинга и логирования, автоматизация рутинных задач, поддержка production окружения."
+    - year: "2012-2017"
+      position: "System Administrator"
+      company: "Digital Services Co."
+      description: "Администрирование серверной инфраструктуры, настройка сетевого оборудования, обеспечение информационной безопасности, техническая поддержка."
