feat: initial for gemini

--- a/static/content.yaml
+++ b/static/content.yaml
@@ -9,7 +9,11 @@ ru:
   about:
     photo: "/static/photo.jpg"
     title: "Обо мне"
-    description: "Senior DevOps, SRE с большим опытом работы в IT-индустрии. Специализируюсь на администрировании Linux систем, автоматизации процессов и построении надежной инфраструктуры."
+    description: |
+      Senior DevOps, SRE с большим опытом работы в IT-индустрии.
+      Специализируюсь на администрировании Linux систем, автоматизации процессов и построении надежной инфраструктуры.
+
+      Создаю стабильные и продуктивные решения, которые не будут усложнены.
     skills:
       - "15+ лет опыта в администрировании Linux и UNIX систем"
       - "Настройка и поддержка сложных высоконагруженных систем"
