chore: remove comments

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ wasm-bindgen-futures = "0.4"
 web-sys = { version = "0.3", features = ["Window", "Document", "Element"] }
 
 [profile.release]
-opt-level = "z"   # Optimize for size
-lto = true        # Enable Link Time Optimization
-codegen-units = 1 # Better optimization (slower compile)
-panic = "abort"   # Remove unwinding code
-strip = true      # Remove debug symbols
+opt-level = "z"
+lto = true
+codegen-units = 1
+panic = "abort"
+strip = true
