--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install wasm32 target
         run: rustup target add wasm32-unknown-unknown
       - name: Build site with Trunk
-        run: trunk build --release --public-url /site/
+        run: trunk build --release --public-url /
       - name: Upload artifact for GitHub Pages
         uses: actions/upload-pages-artifact@v3
         with:
