--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 yew = { version = "0.21", features = ["csr"] }
+yew-router = "0.18"
 wasm-bindgen = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
