--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,8 @@ yew-router = "0.18"
 wasm-bindgen = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
-gloo-net = "0.5"
+once_cell = "1.19"
 gloo-console = "0.3"
-wasm-bindgen-futures = "0.4"
 web-sys = { version = "0.3", features = ["Window", "Document", "Element"] }
 
 [profile.release]
